mdapipkg/objects/Training__c.object
<CustomObject>
    <description>This is a child of the event object. For example, someone goes to a &apos;Training Event&apos; that lasts a week and within that are 4 &apos;sub&apos;- events that are specific trainings.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Look up to Parent event</description>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <label>Training Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Leadership Conference (GLC)</fullName>
                </value>
                <value>
                    <fullName>Officer Education Other</fullName>
                </value>
                <value>
                    <fullName>Officer Fundamentals On-Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Training</label>
    <nameField>
        <displayFormat>TRN-{0000}</displayFormat>
        <label>Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>